# solver_captcha

./: LICENSE  README.md  pyproject.toml  solver_captcha_training.ipynb
